add(UI): new menus

--- a/account_payable.html
+++ b/account_payable.html
@@ -13,12 +13,8 @@
 		<a href="account_payble.html">4. Account Payable</a>
 		<a href="inventory.html">5. Inventory</a>
 		<a href="general_ledger.html">7. General Ledger</a>
-		<a href="customers.html">1<u>0</u>. Customers</a>
+		<a href="customers.html">1<u>2</u>. Customers</a>
 	</div>
-	<div class="main" id="root">
-		<button class="button" id="new-cust">New Customer</button>
-		<button class="button" id="edit-cust">Edit Customer</button>
-	</div>
-
+	<div class="main"></div>
 </body>
 </html>
