--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
 </head>
 <body>
 	<div class="sidenav">
-		<a href="sales_orders.html">Sales orders</a>
-		<a href="customers.html">Customers</a>
-		<a href="purchase_orders.html">Purchase Orders</a>
+		<a href="sales_orders.html">1. Sales orders</a>
+		<a href="purchase_orders.html">2. Purchase Orders</a>
+		<a href="account_receivable.html">3. Account Receiveble</a>
+		<a href="account_payble.html">4. Account Payable</a>
+		<a href="account_payble.html">5. Account Payable</a>
+		<a href="general_ledger.html">7. General Ledger</a>
+		<a href="customers.html">1<u>0</u>. Customers</a>
 	</div>
 	<div class="main"></div>
 </body>
