--- a/general_ledger.html
+++ b/general_ledger.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Account Payable - BSM</title>
+	<title>General Ledger - BSM</title>
 	<link rel="stylesheet" href="style.css">
 	<script type="module" src="script.js"></script>
 </head>
@@ -13,17 +13,25 @@
 		<a href="sales_orders.html">📋 Sales Orders</a>
 		<a href="purchase_orders.html">🛒 Purchase Orders</a>
 		<a href="account_receivable.html">💰 Account Receivable</a>
-		<a href="account_payable.html" class="active">💳 Account Payable</a>
-		<a href="general_ledger.html">📊 General Ledger</a>
+		<a href="account_payable.html">💳 Account Payable</a>
+		<a href="general_ledger.html" class="active">📊 General Ledger</a>
 		<a href="customers.html">👥 Customers</a>
 	</nav>
 	<main class="main">
 		<div class="page-header">
-			<h1>Account Payable</h1>
-			<p>Manage money your business owes</p>
+			<h1>General Ledger</h1>
+			<p>View and manage your general ledger entries</p>
 		</div>
 		<div class="card fade-in">
-			<p>Account payable management coming soon...</p>
+			<div class="form-section">
+				<h3 class="section-title">General Ledger Entries</h3>
+				<div style="text-align: center; padding: var(--spacing-xl); color: var(--text-secondary);">
+					<p>General ledger functionality coming soon...</p>
+					<p style="margin-top: var(--spacing-md); font-size: var(--font-size-sm);">
+						This page will display all general ledger transactions, account balances, and financial reports.
+					</p>
+				</div>
+			</div>
 		</div>
 	</main>
 </body>
