--- a/purchase_orders.html
+++ b/purchase_orders.html
@@ -1,20 +1,30 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-<title>BSM</title>
-<link rel="stylesheet" href="style.css">
-<script type="module" src="script.js"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Purchase Orders - BSM</title>
+	<link rel="stylesheet" href="style.css">
+	<script type="module" src="script.js"></script>
 </head>
 <body>
-	<div class="sidenav">
-		<a href="sales_orders.html">1. Sales orders</a>
-		<a href="purchase_orders.html">2. Purchase Orders</a>
-		<a href="account_receivable.html">3. Account Receiveble</a>
-		<a href="account_payble.html">4. Account Payable</a>
-		<a href="inventory.html">5. Inventory</a>
-		<a href="general_ledger.html">7. General Ledger</a>
-		<a href="customers.html">1<u>0</u>. Customers</a>
-	</div>
-	<div class="main"></div>
+	<nav class="sidenav" role="navigation" aria-label="Main navigation">
+		<a href="index.html">🏠 Dashboard</a>
+		<a href="sales_orders.html">📋 Sales Orders</a>
+		<a href="purchase_orders.html" class="active">🛒 Purchase Orders</a>
+		<a href="account_receivable.html">💰 Account Receivable</a>
+		<a href="account_payable.html">💳 Account Payable</a>
+		<a href="general_ledger.html">📊 General Ledger</a>
+		<a href="customers.html">👥 Customers</a>
+	</nav>
+	<main class="main">
+		<div class="page-header">
+			<h1>Purchase Orders</h1>
+			<p>Manage your purchase orders</p>
+		</div>
+		<div class="card fade-in">
+			<p>Purchase order management coming soon...</p>
+		</div>
+	</main>
 </body>
 </html>
