--- a/general_ledger.html
+++ b/general_ledger.html
@@ -16,6 +16,9 @@
 		<a href="account_payable.html">💳 Account Payable</a>
 		<a href="general_ledger.html" class="active">📊 General Ledger</a>
 		<a href="customers.html">👥 Customers</a>
+		<div class="sidenav-settings">
+			<a href="#" class="settings-link" id="settings-link">⚙️ Settings</a>
+		</div>
 	</nav>
 	<main class="main">
 		<div class="page-header">
@@ -34,5 +37,31 @@
 			</div>
 		</div>
 	</main>
+	
+	<!-- Settings Modal -->
+	<div class="settings-modal" id="settings-modal">
+		<div class="settings-modal-content">
+			<div class="settings-modal-header">
+				<h2>Settings</h2>
+				<button class="settings-close" id="settings-close">&times;</button>
+			</div>
+			
+			<div class="settings-section">
+				<div class="settings-section-title">Theme</div>
+				<div class="settings-option">
+					<div class="settings-option-label">Color Theme</div>
+					<div class="theme-selector">
+						<button class="theme-option active" data-theme="light">Light</button>
+						<button class="theme-option" data-theme="dark">Dark</button>
+					</div>
+				</div>
+			</div>
+			
+			<div class="settings-section">
+				<div class="settings-section-title">Other Settings</div>
+				<p style="color: var(--text-secondary); font-size: var(--font-size-sm);">More settings coming soon...</p>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
